<resources>
    <string name="app_name">BottomNavDemo</string>
    <string name="log_in_page_title">Log In</string>
    <string name="log_in_page_subtitle">We\'re happy to see you back!</string>
    <string name="log_in_email_hint">Email</string>
    <string name="log_in_button_text">Log In</string>
    <string name="log_in_password_hint">Password</string>
    <string name="lecture_notes_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea…</string>
    <string name="lecture_notes">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu nunc semper, porttitor enim ac, ullamcorper tortor. Nunc placerat orci eu erat dapibus, vitae aliquam nulla convallis. Nulla bibendum turpis velit, sed semper dolor scelerisque sagittis. Quisque risus justo, porttitor sit amet felis ac, interdum condimentum lorem. Sed sollicitudin ac urna sed suscipit. Vestibulum sit amet sollicitudin lorem. Vestibulum accumsan, velit et consequat egestas, neque augue porttitor lorem, et dictum ex ipsum at libero. Curabitur aliquam massa ac nunc commodo laoreet. Vestibulum suscipit, mi id lacinia faucibus, enim augue aliquam dui, sit amet rhoncus lectus sem imperdiet velit.\nMorbi dapibus accumsan ante, nec tempus nisl dignissim vel. Cras non vulputate risus. Sed et ultrices ante. Nullam tristique odio mauris, non dapibus neque cursus in. Aenean eu enim nec nibh ullamcorper vehicula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam est magna, egestas nec malesuada eget, faucibus at libero. Integer nec ullamcorper purus, nec tristique orci. Nulla augue velit, aliquam nec facilisis at, blandit sit amet diam. Nulla facilisi. Curabitur vitae condimentum purus, sed suscipit lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="read_more">Read more</string>
</resources>